# FentEngine

./: CMakeLists.txt
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h  Structs.h
src/Engine/Animation/: AnimationManager.cpp  AnimationManager.h
src/Engine/Asset/: AssetManager.cpp  AssetManager.h
src/Engine/Audio/: AudioManager.cpp  AudioManager.hpp
src/Engine/Entity/: Entity.cpp  Entity.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Scene/: Scene.h  SceneManager.cpp  SceneManager.h
src/Engine/Settings/: Settings.cpp  Settings.hpp
src/Engine/Sound/: Sound.cpp  Sound.hpp
src/Engine/TaskQueue/: TaskQueue.cpp  TaskQueue.h
src/Engine/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
src/Game/src/: Game.cpp  Game.h
src/Game/src/Scenes/: LoadingScene.cpp  LoadingScene.h
